--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
     <script>
     var map = L.map('map').setView([0.5620226,124.3101899],14);
-    var basemap0 = L.tileLayer('http://{s}.google.com/vt/lyrs=p&x={x}&y={y}&z={z}', {
+    var basemap0 = L.tileLayer('https://{s}.google.com/vt/lyrs=p&x={x}&y={y}&z={z}', {
     maxZoom: 20,
     subdomains:['mt0','mt1','mt2','mt3'],
     attribution: 'Google Terrain | <a href="https://drive.google.com/file/d/1aMERovd4D6B6-dqzM9cpTfOnxjcTP7Ms/view?usp=sharing" target="_blank">Surono</a>'
     });
-    var basemap1 = L.tileLayer('http://{s}.google.com/vt/lyrs=y&x={x}&y={y}&z={z}', {
+    var basemap1 = L.tileLayer('https://{s}.google.com/vt/lyrs=y&x={x}&y={y}&z={z}', {
     maxZoom: 20,
     subdomains:['mt0','mt1','mt2','mt3'],
     attribution: 'Google Satellite | <a href="https://drive.google.com/file/d/1aMERovd4D6B6-dqzM9cpTfOnxjcTP7Ms/view?usp=sharing" target="_blank">Surono</a>'
